Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82122

QTabBar in inactive status looks like ComboBox in Dark Mode

XMLWordPrintable

    • macOS
    • 0e643bf7830949ade66e76a6eefa99b4b24c422b (qt/qtbase/5.15) 379895798eb3db0af30c7db2da01c3f8e187446a (qt/qtbase/5.14)

      When the application is out side of focus (i.e. inactive mode), QTabBar appears to look like ComboBox ( The arrows appear, see TabBar_inactive.png).
      This happens when there's only one tab.

      How to reproduce :
      1. Run the sample application(Qtbug82122.zip) in Dark Mode
      2. Click some other window so that the application goes out of focus

        1. Qtbug82122.zip
          6 kB
        2. TabBar_active.png
          TabBar_active.png
          173 kB
        3. TabBar_inactive.png
          TabBar_inactive.png
          104 kB
        For Gerrit Dashboard: QTBUG-82122
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes